# sqlfluff

./: .coveragerc  .deepsource.toml  .dockerignore  .editorconfig  .gitattributes  .gitatttributes  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .ruff.toml  .sqlfluff  .travis.yml  .yamllint  <string input>  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  Dockerfile  Dockerfile.dev  FLINK_SQL_IMPLEMENTATION_REVIEW.md  FLINK_SQL_SUMMARY.md  LICENSE.md  MANIFEST.in  Makefile  README.md  SECURITY.md  TODO.md  anonymize.sql  coverage.lcov  createTableTest.sql  docker-compose.yml  environment.yml  example-tab.sql  example.sql  http.sql  (+37 more)
plugins/sqlfluff-plugin-example/: MANIFEST.in  README.md  pyproject.toml  setup.py
plugins/sqlfluff-plugin-example/src/example/: __init__.py  plugin_default_config.cfg  rules.py
plugins/sqlfluff-plugin-example/src/sqlfluff_plugin_example/: __init__.py  rules.py
plugins/sqlfluff-plugin-example/test/: __init__.py
plugins/sqlfluff-plugin-example/test/rules/: rule_test_cases_test.py
plugins/sqlfluff-templater-dbt/: README.md  pyproject.toml  setup.cfg  setup.py
plugins/sqlfluff-templater-dbt/docker/: Dockerfile.dev  docker-compose.yml  init  shell  shutdown  startup
plugins/sqlfluff-templater-dbt/sqlfluff_templater_dbt/: __init__.py  templater.py
plugins/sqlfluff-templater-dbt/sqlfluff_templater_dbt/osmosis/: README.md  __init__.py  exceptions.py  log_controller.py  patch.py
plugins/sqlfluff-templater-dbt/src/dbt_templater/: __init__.py  templater.py
plugins/sqlfluff-templater-dbt/src/sqlfluff_templater_dbt/: templater.py
plugins/sqlfluff-templater-dbt/test/: .gitignore  conftest.py  generate_packages_yml.py  linter_test.py  rules_test.py  templater_db_failure_test.py  templater_test.py
plugins/sqlfluff-templater-sqlmesh/: LICENSE.md  README.md  STYLE_GUIDE.md  pyproject.toml
plugins/sqlfluff-templater-sqlmesh/sqlfluff_templater_sqlmesh/: __init__.py  rules.py  templater.py
plugins/sqlfluff-templater-sqlmesh/test/: __init__.py  basic_test.py  fixtures_test.py  integration_test.py  rules_test.py  templater_integration_test.py  tier_mapping_test.py
rsqlfluff/: Cargo.toml  pyproject.toml  rsqlfluff.pyi
rsqlfluff/src/: lexer.rs  lib.rs  marker.rs  matcher.rs  python.rs  slice.rs
rsqlfluff/src/config/: fluffconfig.rs
rsqlfluff/src/dialect/: matcher.rs  mod.rs
rsqlfluff/src/templater/: fileslice.rs  mod.rs  templatefile.rs
rsqlfluff/src/token/: construction.rs  eq.rs  mod.rs  python.rs
rsqlfluff/utils/: build.sh  build_lexers.py
sqlfluffrs/: AGENTS.md  Cargo.toml  ENGINE.md  LICENSE.md  PERF.md  README.md  TESTING.md  pyproject.toml  rust-toolchain.toml  sqlfluffrs.pyi  test_iterative_stack.rs
sqlfluffrs/.cargo/: config.toml
sqlfluffrs/benches/: baseline_phase1.rs  delimited_performance.rs  parser_bench.rs  tpc_bench.rs
sqlfluffrs/examples/: analyze_performance.rs  bench_element_cache.rs  check_tokens.rs  debug_parse.rs  debug_tokens.rs  format_ast.rs  grammar_inst_demo.rs  memory_profile.rs  parse_fixture.rs  parse_mode_demo.rs  profile_detailed.rs  profile_expression_recursion.rs  quick_parse_test.rs  table_driven_parse.rs  test_cache.rs  test_group_by.rs  test_lex_spaces.rs  test_pruning.rs  test_publication.rs  test_simple_tokens.rs  time_tpc.rs
sqlfluffrs/sqlfluffrs_benchmarks/: Cargo.toml  README.md  build.rs
sqlfluffrs/sqlfluffrs_benchmarks/benches/: tpc_bench.rs
sqlfluffrs/sqlfluffrs_benchmarks/examples/: time_tpc.rs
sqlfluffrs/sqlfluffrs_benchmarks/src/: lib.rs
sqlfluffrs/sqlfluffrs_cli/: Cargo.toml  README.md
sqlfluffrs/sqlfluffrs_cli/src/: cli.rs  main.rs  output.rs  templating.rs
sqlfluffrs/sqlfluffrs_dialects/: Cargo.toml  README.md  build.rs
sqlfluffrs/sqlfluffrs_dialects/src/: block_comment.rs  helpers.rs  lib.rs
sqlfluffrs/sqlfluffrs_engine/: Cargo.toml
sqlfluffrs/sqlfluffrs_engine/src/: config.rs  discovery.rs  lib.rs  pipeline.rs
sqlfluffrs/sqlfluffrs_lexer/: Cargo.toml  README.md
sqlfluffrs/sqlfluffrs_lexer/src/: lexer.rs  lib.rs  matcher.rs
sqlfluffrs/sqlfluffrs_parser/: Cargo.toml  README.md
sqlfluffrs/sqlfluffrs_parser/src/: lib.rs
sqlfluffrs/sqlfluffrs_python/: Cargo.toml
sqlfluffrs/sqlfluffrs_python/src/: config.rs  lib.rs  marker.rs  slice.rs  token.rs
sqlfluffrs/sqlfluffrs_rules/: Cargo.toml
sqlfluffrs/sqlfluffrs_rules/src/: capitalisation.rs  cp01.rs  cp03.rs  cp04.rs  lib.rs  python.rs
sqlfluffrs/sqlfluffrs_types/: Cargo.toml  README.md
sqlfluffrs/sqlfluffrs_types/src/: grammar_api.rs  grammar_inst.rs  grammar_tables.rs  grammar_tables_test.rs  identity.rs  lib.rs  marker.rs  matcher.rs  parser.rs  regex.rs  slice.rs  types.rs
sqlfluffrs/src/: engine_entry.rs  lexer.rs  lib.rs  marker.rs  matcher.rs  parser.rs  parser_cache.rs  parser_old.rs  python.rs  regex.rs  slice.rs  test_harness.rs
sqlfluffrs/src/config/: fluffconfig.rs
sqlfluffrs/src/dialect/: matcher.rs  mod.rs  parser.rs  testingparser.rs
sqlfluffrs/src/parser/: cache.rs  core.rs  frame.rs  helpers.rs  iterative.rs  mod.rs  recursive.rs  types.rs  utils.rs
sqlfluffrs/src/templater/: fileslice.rs  templatefile.rs
sqlfluffrs/src/token/: construction.rs  eq.rs  fix.rs  mod.rs  path.rs  python.rs
sqlfluffrs/tests/: debug_cast.rs  debug_cast_simple.rs  debug_create_cast.rs  debug_exasol_adapter.rs  debug_table_expr.rs  debug_table_expr_small.rs  debug_tokens.rs  debug_trino_array.rs  debug_trino_trace.rs  fixture_tests.rs  parse_mode_equality.rs  parser.rs  table_driven_select.rs  table_driven_small.rs  table_driven_smoke.rs  test_bracketed_sequence.rs  test_delimited_terminator_timing.rs  test_double_at.rs  test_handle_exception.rs  test_is_not_distinct.rs  test_literals_fixture_only.rs  test_multiple_statements.rs  test_numeric_literal.rs  test_optional_delimiter.rs  yaml_compare.rs
sqlfluffrs/tests/parser/: basic_sql.rs  common.rs  exclude.rs  grammar.rs  grammar_extended.rs  grammar_python_parity.rs  iterative.rs  mod.rs  test_anynumberof_order.rs  token_coverage.rs
(+8575 files in other folders)
