[metadata]
name = sqlfluff
version = 0.9.0
description = The SQL Linter for Humans
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sqlfluff/sqlfluff
author = Alan Cruickshank
author_email = alan@designingoverload.com
license = MIT License
license_files = LICENSE.md
project_urls =
    Homepage = https://www.sqlfluff.com
    Documentation = https://docs.sqlfluff.com
    Changes = https://github.com/sqlfluff/sqlfluff/blob/main/CHANGELOG.md
    Source = https://github.com/sqlfluff/sqlfluff
    Issue Tracker = https://github.com/sqlfluff/sqlfluff/issues
    Twitter = https://twitter.com/SQLFluff
    Chat = https://github.com/sqlfluff/sqlfluff#sqlfluff-on-slack
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
    Topic :: Software Development :: Quality Assurance
keywords =
    sqlfluff
    sql
    linter
    formatter
    bigquery
    exasol
    hive
    mysql
    postgres
    redshift
    snowflake
    spark3
    sqlite
    teradata
    tsql
    dbt

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    # Used for finding os-specific application config dirs
    appdirs
    # Cached property for performance gains
    cached-property
    # To get the encoding of files.
    chardet
    click>=7.1
    colorama>=0.3
    # Used for diffcover plugin
    diff-cover>=2.5.0
    # importlib_metadata backport for python 3.7
    importlib_metadata; python_version < '3.8'
    Jinja2
    # oyaml is like pyyaml but preserves orderings
    oyaml
    # Used for .sqlfluffignore
    pathspec
    # We provide a testing library for plugins in sqlfluff.testing
    pytest
    # The new regex module to allow for more complex pattern matching,
    # whilst remaining backwards compatible with existing regex use cases.
    # e.g. capturing repeated groups in nested tsql block comments.
    # This was introduced in https://github.com/sqlfluff/sqlfluff/pull/2027
    # and further details can be found in that PR.
    regex
    # For returning exceptions from multiprocessing.Pool.map()
    tblib
    # For parsing pyproject.toml
    toml
    # For handling progress bars
    tqdm
    # better type hints for older python versions
    typing_extensions

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    sqlfluff = sqlfluff.cli.commands:cli
diff_cover =
    sqlfluff = sqlfluff.diff_quality_plugin
sqlfluff =
    sqlfluff = sqlfluff.core.plugin.lib

[options.package_data]
sqlfluff =
    config.ini
    core/default_config.cfg
    py.typed

[sqlfluff_docs]
stable_version = 0.9.0
