[package]
name = "rsqlfluff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsqlfluff"
crate-type = ["cdylib"]

[features]
unicode = []
python = ["unicode", "pyo3"]

[dependencies]
env_logger = "0.11.6"
fancy-regex = "0.14.0"
hashbrown = "0.15.2"
itertools = "0.14.0"
log = "0.4.25"
once_cell = "1.20.2"
pyo3 = { version = "0.24.2", optional = true, features = ["hashbrown", "extension-module", "uuid"] }
pyo3-log = { version = "0.12.1", optional = true }
regex = { version = "1.11.1", features = ["perf"] }
slotmap = "1.0.7"
uuid = { version = "1.12.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.11.6"
