[package]
name = "sqlfluffrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sqlfluffrs"
crate-type = ["cdylib", "rlib"]

[features]
unicode = []
python = ["unicode", "pyo3"]

[dependencies]
env_logger = "0.11.8"
fancy-regex = "0.16.2"
hashbrown = "0.15.5"
itertools = "0.14.0"
log = "0.4.28"
once_cell = "1.21.3"
pyo3 = { version = "0.26.0", optional = true, features = ["hashbrown", "extension-module", "uuid"] }
pyo3-log = { version = "0.13.0", optional = true }
regex = { version = "1.11.2", features = ["perf"] }
slotmap = "1.0.7"
uuid = { version = "1.18.1", features = ["v4"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
bincode = "1.3.3"

[dev-dependencies]
env_logger = "0.11.6"
