[package]
name = "sqlfluffrs"
# NOTE: Version uses Rust SemVer format (e.g., "4.0.0-alpha.1").
# Maturin automatically converts this to PEP 440 format for the Python package (e.g., "4.0.0a1").
# See: https://www.maturin.rs/metadata.html
version = "4.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sqlfluffrs"
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "sqlfluffrs_dialects",
    "sqlfluffrs_lexer",
    "sqlfluffrs_parser",
    "sqlfluffrs_types",
    "sqlfluffrs_python",
]

[workspace.package]
version = "4.0.3"

[features]
unicode = []
verbose-debug = ["sqlfluffrs_parser/verbose-debug"]
python = [
    "unicode",
    "pyo3",
    "sqlfluffrs_lexer/python",
    "sqlfluffrs_parser/python",
    "sqlfluffrs_python",
]

[dependencies]
env_logger = "0.11.8"
regex = { version = "1.11.2", features = ["perf"] }
fancy-regex = "0.16.2"
hashbrown = "0.15.5"
itertools = "0.14.0"
log = "0.4.28"
once_cell = "1.21.3"
smallvec = "1.13.2"
pyo3 = { version = "0.26.0", optional = true, features = [
    "hashbrown",
    "extension-module",
    "uuid",
] }
pyo3-log = { version = "0.13.0", optional = true }
slotmap = "1.0.7"
uuid = { version = "1.18.1", features = ["v4"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
bincode = "1.3.3"
blake2 = "0.10.6"
sqlfluffrs_types = { path = "sqlfluffrs_types" }
sqlfluffrs_lexer = { path = "sqlfluffrs_lexer" }
sqlfluffrs_dialects = { path = "sqlfluffrs_dialects" }
sqlfluffrs_parser = { path = "sqlfluffrs_parser" }
sqlfluffrs_python = { path = "sqlfluffrs_python", optional = true }

[dev-dependencies]
env_logger = "0.11.6"
criterion = "0.7.0"
flamegraph = "0.6.8"

[[bench]]
name = "parser_bench"
harness = false

[profile.bench]
debug = true
[profile.release]
debug = true
