[package]
name = "sqlfluffrs"
# NOTE: Version uses Rust SemVer format (e.g., "4.0.0-alpha.1").
# Maturin automatically converts this to PEP 440 format for the Python package (e.g., "4.0.0a1").
# See: https://www.maturin.rs/metadata.html
version = "4.2.2"
edition = "2021"
rust-version.workspace = true
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sqlfluffrs"
crate-type = ["cdylib", "rlib"]
bench = false

[workspace]
members = [
    "sqlfluffrs_dialects",
    "sqlfluffrs_lexer",
    "sqlfluffrs_parser",
    "sqlfluffrs_rules",
    "sqlfluffrs_types",
    "sqlfluffrs_python",
    "sqlfluffrs_benchmarks",
    "sqlfluffrs_cli",
    "sqlfluffrs_engine",
]

[workspace.package]
version = "4.2.2"
rust-version = "1.96"

[workspace.dependencies]
env_logger = "0.11.9"
regex = { version = "1.12.3", features = ["perf"] }
fancy-regex = "0.17.0"
hashbrown = "0.16.1"
itertools = "0.14.0"
log = "0.4.29"
smallvec = "1.15.1"
once_cell = "1.21.4"
bincode = "1.3.3"
# NOTE: Update the abi3 version as we deprecate old python versions.
# It should match the oldest currently supported python version.
pyo3 = { version = "0.29.0", features = [
    "abi3-py310",
    "hashbrown",
    "extension-module",
    "uuid",
] }
uuid = { version = "1.22.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
criterion = "0.8.2"

[features]
unicode = []
verbose-debug = ["sqlfluffrs_parser/verbose-debug"]
python = [
    "unicode",
    "pyo3",
    "sqlfluffrs_lexer/python",
    "sqlfluffrs_parser/python",
    "sqlfluffrs_rules/python",
    "sqlfluffrs_python",
]

[dependencies]
env_logger.workspace = true
hashbrown.workspace = true
log.workspace = true
pyo3 = { workspace = true, optional = true }
serde_yaml_ng.workspace = true
blake2 = "0.10.6"
sqlfluffrs_types = { path = "sqlfluffrs_types" }
sqlfluffrs_lexer = { path = "sqlfluffrs_lexer" }
sqlfluffrs_dialects = { path = "sqlfluffrs_dialects" }
sqlfluffrs_parser = { path = "sqlfluffrs_parser" }
sqlfluffrs_rules = { path = "sqlfluffrs_rules" }
sqlfluffrs_python = { path = "sqlfluffrs_python", optional = true }
sqlfluffrs_engine = { path = "sqlfluffrs_engine" }

[dev-dependencies]
env_logger.workspace = true
criterion.workspace = true

[[bench]]
name = "parser_bench"
harness = false

[profile.bench]
debug = true
strip = false

[profile.release]
debug = false
strip = true
