[build-system]
# `sqlfluff` is listed as a build requirement so that pip installs it (and all
# its transitive dependencies: tblib, click, Jinja2, regex, pytest, …) into
# the isolated build environment before maturin invokes cargo.
#
# The Cargo build script (sqlfluffrs_dialects/build.rs) then prepends
# <repo_root>/src to PYTHONPATH so that utils/rustify.py uses the *local*
# dialect definitions from the cloned branch rather than the PyPI version.
# This ensures newly-added dialects on a feature branch are included.
#
# Together these make the package installable directly from a git VCS URL
# without a prior `tox -e generate-rs` step:
#
#   `pip install "sqlfluffrs @ git+https://github.com/sqlfluff/sqlfluff#subdirectory=sqlfluffrs"`
#   `uvx --with "sqlfluffrs @ git+https://github.com/sqlfluff/sqlfluff#subdirectory=sqlfluffrs" sqlfluff --version`
#   Running `pre-commit`
requires = ["maturin>=1.8,<2.0", "sqlfluff"]
build-backend = "maturin"

[project]
name = "sqlfluffrs"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md" }
description = "The SQL Linter for Humans"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: SQL",
    "Topic :: Utilities",
    "Topic :: Software Development :: Quality Assurance",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://www.sqlfluff.com"
Documentation = "https://docs.sqlfluff.com"
Source = "https://github.com/sqlfluff/sqlfluff"
"Issue Tracker" = "https://github.com/sqlfluff/sqlfluff/issues"

[tool.maturin]
features = ["pyo3/extension-module", "python"]

[tool.uv.sources]
sqlfluff = { workspace = true }
