[metadata]
name = sqlfluff-templater-dbt
version = 0.9.0
description = Lint your dbt project SQL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sqlfluff/sqlfluff
author = Alan Cruickshank
author_email = alan@designingoverload.com
license = MIT License
license_files = LICENSE.md
project_urls =
    Homepage = https://www.sqlfluff.com
    Documentation = https://docs.sqlfluff.com
    Changes = https://github.com/sqlfluff/sqlfluff/blob/main/CHANGELOG.md
    Source = https://github.com/sqlfluff/sqlfluff
    Issue Tracker = https://github.com/sqlfluff/sqlfluff/issues
    Twitter = https://twitter.com/SQLFluff
    Chat = https://github.com/sqlfluff/sqlfluff#sqlfluff-on-slack
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
    Topic :: Software Development :: Quality Assurance
keywords =
    sqlfluff
    sql
    linter
    formatter
    bigquery
    exasol
    hive
    mysql
    postgres
    redshift
    snowflake
    spark3
    sqlite
    teradata
    tsql
    dbt

[options]
packages = find:
python_requires = >=3.7
install_requires =
    sqlfluff>=0.7.0
    dbt-core>=0.17
    jinja2-simple-tags>=0.3.1

[options.packages.find]
include =
    sqlfluff_templater_dbt

[options.entry_points]
sqlfluff =
    sqlfluff_templater_dbt = sqlfluff_templater_dbt
