[metadata]
name = sqlfluff-templater-dbt
version = 3.0.4
description = Lint your dbt project SQL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sqlfluff/sqlfluff
author = Alan Cruickshank
author_email = alan@designingoverload.com
license = MIT License
license_files = LICENSE.md
project_urls =
    Homepage = https://www.sqlfluff.com
    Documentation = https://docs.sqlfluff.com
    Changes = https://github.com/sqlfluff/sqlfluff/blob/main/CHANGELOG.md
    Source = https://github.com/sqlfluff/sqlfluff
    Issue Tracker = https://github.com/sqlfluff/sqlfluff/issues
    Twitter = https://twitter.com/SQLFluff
    Chat = https://github.com/sqlfluff/sqlfluff#sqlfluff-on-slack
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
    Topic :: Software Development :: Quality Assurance
keywords =
    sqlfluff
    sql
    linter
    formatter
    bigquery
    clickhouse
    databricks
    db2
    duckdb
    exasol
    greenplum
    hive
    materialize
    mysql
    postgres
    redshift
    snowflake
    soql
    sparksql
    sqlite
    teradata
    tsql
    dbt

[options]
packages = find:
python_requires = >=3.8
install_requires =
    sqlfluff==3.0.4
    dbt-core>=1.0.0
    jinja2-simple-tags>=0.3.1
    markupsafe
    pydantic
    rich
    ruamel.yaml

[options.packages.find]
include =
    sqlfluff_templater_dbt
    sqlfluff_templater_dbt.osmosis

[options.entry_points]
sqlfluff =
    sqlfluff_templater_dbt = sqlfluff_templater_dbt
